--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,81 +1,33 @@
 cmake_minimum_required(VERSION 3.12)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
-include("kae/add_clang_tests")
-include("kae/cpp_compiler")
-include("kae/cpp_flags")
-include("kae/cpp_warnings")
-include("kae/set_default")
 
+option(KAE_TESTS "Build tests" OFF)
 
-if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
-    set(IS_ROOT_LIST ON)
-
-    set_default(CMAKE_BUILD_TYPE "Debug" STRING)
-    set_default(CMAKE_MESSAGE_CONTEXT_SHOW ON BOOL)
-    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-else ()
-    set(IS_ROOT_LIST OFF)
-endif ()
-
-if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-    set(IS_DEBUG ON)
-else ()
-    set(IS_DEBUG OFF)
-endif ()
-
-
-option(KAE_TESTS "Build tests" ${IS_ROOT_LIST})
-option(KAE_AUTO_COMPILERS "Automatically override compilers" ${IS_ROOT_LIST})
-option(KAE_AUTO_FLAGS "Automatically override flags" ${IS_ROOT_LIST})
-set(KAE_ARCH "native" CACHE STRING "Machine architecture")
-set(KAE_SANITIZERS "address,undefined" CACHE STRING "Sanitizers to use (only in Debug)")
-option(BUILD_SHARED_LIBS "Link shared libs instead of static libs" ${IS_DEBUG})
-
-
-if (KAE_AUTO_COMPILERS)
-    cpp_compiler_auto()
-endif ()
 
 project("kae"
     VERSION 0.0.0
     LANGUAGES CXX
 )
 
-set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_OPTIMIZE_DEPENDENCIES ON)
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
-if (KAE_AUTO_FLAGS)
-    cpp_flags_auto("${KAE_ARCH}" "${KAE_SANITIZERS}")
-    cpp_warnings_auto()
+file(GLOB_RECURSE src CONFIGURE_DEPENDS "src/*.cpp")
+add_library("kae" ${src})
+add_library("kae::kae" ALIAS "kae")
+target_include_directories("kae" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_link_libraries("${PROJECT_NAME}" PUBLIC
+    "fmt::fmt"
+)
+if (WIN32)
+    target_link_libraries("${PROJECT_NAME}" PUBLIC
+        "Dbghelp"
+    )
 endif ()
 
 if (KAE_TESTS)
-    enable_testing()
-    if (IS_ROOT_LIST)
-        add_clang_tests("${PROJECT_SOURCE_DIR}")
+    file(GLOB_RECURSE test_src CONFIGURE_DEPENDS "test/*.cpp")
+    add_executable("kae_test" ${test_src})
+    target_link_libraries("kae_test" PRIVATE "kae" "doctest::doctest_with_main")
+    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+        target_compile_options("kae_test" PRIVATE "-fno-sanitize-recover=all")
     endif ()
+    add_test(NAME "kae_test" COMMAND "kae_test")
 endif ()
-
-file(GLOB_RECURSE data RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/data" CONFIGURE_DEPENDS "data/*")
-foreach (file IN LISTS data)
-    add_custom_command(OUTPUT "${CMAKE_BINARY_DIR}/data/${file}"
-        COMMAND cmake -E copy "${CMAKE_CURRENT_SOURCE_DIR}/data/${file}" "${CMAKE_BINARY_DIR}/data/"
-        DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/data/${file}"
-        COMMENT "Copying data/${file}..."
-        VERBATIM
-    )
-    add_custom_target("data_${file}" ALL DEPENDS "${CMAKE_BINARY_DIR}/data/${file}")
-endforeach ()
-
-
-add_subdirectory("third_party/doctest")
-add_subdirectory("third_party/fmt")
-
-add_subdirectory("kae")
