--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,18 +7,16 @@ project("kae"
     LANGUAGES CXX
 )
 
+
 file(GLOB_RECURSE src CONFIGURE_DEPENDS "src/*.cpp")
 add_library("kae" ${src})
 add_library("kae::kae" ALIAS "kae")
 target_include_directories("kae" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_link_libraries("${PROJECT_NAME}" PUBLIC
-    "fmt::fmt"
-)
+target_link_libraries("${PROJECT_NAME}" PUBLIC "fmt::fmt")
 if (WIN32)
-    target_link_libraries("${PROJECT_NAME}" PUBLIC
-        "Dbghelp"
-    )
+    target_link_libraries("${PROJECT_NAME}" PUBLIC "Dbghelp")
 endif ()
+
 
 if (KAE_TESTS)
     file(GLOB_RECURSE test_src CONFIGURE_DEPENDS "test/*.cpp")
@@ -27,5 +25,5 @@ if (KAE_TESTS)
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         target_compile_options("kae_test" PRIVATE "-fno-sanitize-recover=all")
     endif ()
-    add_test(NAME "kae_test" COMMAND "kae_test")
+    add_test(NAME "kae" COMMAND "kae_test")
 endif ()
