--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.19)
 
 option(KAE_TESTS "Build tests" OFF)
 
@@ -12,16 +12,16 @@ file(GLOB_RECURSE src CONFIGURE_DEPENDS "src/*.cpp")
 add_library("kae" ${src})
 add_library("kae::kae" ALIAS "kae")
 target_include_directories("kae" PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_link_libraries("${PROJECT_NAME}" PUBLIC "fmt::fmt")
+target_link_libraries("kae" PUBLIC "fmt::fmt")
 if (WIN32)
-    target_link_libraries("${PROJECT_NAME}" PUBLIC "Dbghelp")
+    target_link_libraries("kae" PUBLIC "Dbghelp")
 endif ()
 
 
 if (KAE_TESTS)
     file(GLOB_RECURSE test_src CONFIGURE_DEPENDS "test/*.cpp")
     add_executable("kae_test" ${test_src})
-    target_link_libraries("kae_test" PRIVATE "kae" "doctest_with_main")
+    target_link_libraries("kae_test" PRIVATE "kae" "doctest::main")
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
         target_compile_options("kae_test" PRIVATE "-fno-sanitize-recover=all")
     endif ()
